--- a/shecode-grp-61-task-master/main.css
+++ b/shecode-grp-61-task-master/main.css
@@ -1,26 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@300&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
-* {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@300&display=swap');
+*{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
-
-* {
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+*{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
-body {
-  font-family: 'Work Sans', sans-serif;
+body{
+  font-family: 'Source Sans Pro', sans-serif;
   width: 90vw;
   max-width: 90vw;
   height: 100vh;
   margin: 0 auto;
-  /* background: red; */
+ /* background: red; */
 }
 
 #header {
